<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingBottom="50dp"
    tools:context="com.example.olena.chatapp.activities.SignUpActivity">

    <ImageButton
        android:id="@+id/goBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:padding="5dp"
        android:contentDescription="@string/go_back_btn"
        android:src="@drawable/ic_reply_black_24dp"
        />
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edges"
        app:layout_constraintTop_toBottomOf="@id/goBackBtn"

        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="50dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <TextView
            android:id="@+id/signUpTxtUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/loginEditUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:hint="@string/login"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_edittext"
            android:paddingStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/signUpTxtUp"
            />
        <EditText
            android:id="@+id/passwordEditUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:paddingStart="5dp"

            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintTop_toBottomOf="@+id/loginEditUp"
            />
        <EditText
            android:id="@+id/passwordRepeatEditUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="15dp"
            android:hint="@string/confirm_password"
            android:paddingStart="5dp"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditUp"
            />
        <EditText
            android:id="@+id/emailEditUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:hint="@string/email"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordRepeatEditUp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rounded_edges"
            android:layout_marginTop="15dp"
            android:text="@string/join"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditUp"
            />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
</ScrollView>