<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context="com.example.olena.chatapp.activities.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edges"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chat"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:gravity="center" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edges"
        android:layout_marginTop="50dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/nameLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:windowSoftInputMode="adjustResize">

        <TextView
            android:id="@+id/signInText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:hint="@string/login"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/signInText"
            />
        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:paddingStart="5dp"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintTop_toBottomOf="@+id/emailEdit"
            />
        <Button
            android:id="@+id/logInBtn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/rounded_edges"
            android:layout_marginTop="15dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEdit"
            />
        <TextView
            android:id="@+id/signUpTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logInBtn"/>
        <View
            android:id="@+id/horline"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/signUpTxt"/>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/horline"/>
        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/twitter_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button"/>
        <Button
            android:id="@+id/instagramBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/instagram_login"
            app:layout_constraintTop_toBottomOf="@+id/twitter_login_button"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:id="@+id/aboutLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/about"
        app:layout_constraintTop_toBottomOf="@+id/mainLayout"
        />
    <TextView
        android:id="@+id/settingsLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/settings"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLayout"
        />
</android.support.constraint.ConstraintLayout>
</ScrollView>