<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context="com.example.olena.chatapp.activities.SettingsActivity">

    <ImageButton
        android:id="@+id/goBackBtnSt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#00000000"
        android:contentDescription="@string/go_back_btn"
        android:padding="5dp"
        android:src="@drawable/ic_reply_black_24dp"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edges"
        app:layout_constraintTop_toBottomOf="@id/goBackBtnSt"
        android:padding="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <RadioButton
            android:id="@+id/blueRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp"/>
        <RadioButton
            android:id="@+id/greenRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/blueRadio"/>
        <RadioButton
            android:id="@+id/yellowRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/greenRadio"/>
        <RadioButton
            android:id="@+id/redRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/yellowRadio"/>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
</ScrollView>